fix text not centered

--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@
     color: #27253e;
     margin-bottom: 20px;
     font-size: 20px;
+    text-align: center;
 }
 
 .evidence {
